--- a/app/ui/header/header.module.css
+++ b/app/ui/header/header.module.css
@@ -1,31 +1,43 @@
 .header {
-  position: fixed;
+  position: absolute;
   display: flex;
   z-index: 1;
   background-color: transparent;
   width: 100%;
   padding: 50px 50px 0;
 
+  &.fixed {
+    position: fixed;
+    background-color: var(--section-orange);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
   @media only screen and (max-width: 991px) {
     display: none;
   }
 }
 
-.copyButton {
+.left {
+  align-self: flex-start;
   flex: 1;
-  text-align: left;
 
-  & > .copyIcon {
-    position: relative;
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    padding-left: 40px;
-    bottom: -2px;
+  .copyButton {
+    & > .copyIcon {
+      position: relative;
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      padding-left: 40px;
+      bottom: -2px;
+    }
+
+    &:hover {
+      color: var(--hover-foreground);
+    }
   }
 }
 
-.links {
+.right {
   align-self: flex-end;
 
   & > * {
