--- a/app/ui/header/header.module.css
+++ b/app/ui/header/header.module.css
@@ -1,15 +1,18 @@
 .header {
+  --padding-horizontal: 50px;
+
   position: absolute;
   display: flex;
   z-index: 1;
   background-color: transparent;
   width: 100%;
-  padding: 50px 50px 0;
+  padding: 50px var(--padding-horizontal) 0;
 
-  &.fixed {
+  &.sticky {
     position: fixed;
     background-color: var(--section-orange);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px var(--padding-horizontal);
   }
 
   @media only screen and (max-width: 991px) {
