--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -5,9 +5,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100dvw;
-  height: 100dvh;
-  padding: 0 70px;
+  width: 100%;
+  height: 100vh;
+  padding: 0 100px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -40,12 +40,19 @@
 .first {
   padding: 0;
 
+  .mainLogos {
+    position: relative;
+    width: 90%;
+    max-width: 1200px;
+  }
+
   .nycContainer,
   .gothamContainer,
   .interboroContainer {
     position: relative;
     box-sizing: border-box;
     width: 90%;
+    max-width: 1200px;
 
     & > img {
       object-fit: contain;
@@ -140,7 +147,7 @@
 
 .fifth {
   background-color: var(--section-orange);
-  height: 40dvh;
+  height: 40vh;
   font-size: clamp(1em, 1.5dvw, 1.5em);
   line-height: 130%;
 }
