--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -146,7 +146,7 @@
 }
 
 .fifth {
-  background-color: var(--section-orange);
+  background: var(--section-orange);
   height: 40vh;
   font-size: clamp(1em, 1.5dvw, 1.5em);
   line-height: 130%;
@@ -156,9 +156,6 @@
 }
 
 .seventh {
-  display: block;
-  padding: 0;
-
   .background {
     & > img {
       object-position: left center;
@@ -171,12 +168,26 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    left: 40%;
+    left: 600px;
     bottom: 100px;
     font-size: clamp(1em, 1dvw, 1.5em);
 
     & > div {
       padding: 0 5%;
+    }
+  }
+
+  @media only screen and (max-width: 1090px) {
+    .background {
+      & > img {
+        object-position: right center;
+      }
+    }
+
+    .textBlocks {
+      position: relative;
+      left: auto;
+      bottom: auto;
     }
   }
 
