--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -8,9 +8,6 @@
   width: 100%;
   height: 100vh;
   padding: 0 100px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 
   & > .background {
     position: absolute;
@@ -21,6 +18,7 @@
 
     & > img {
       object-fit: cover;
+      object-position: center center;
     }
   }
 
@@ -125,8 +123,14 @@
     line-height: 130%;
   }
 
-  @media only screen and (max-width: 767px) {
-    .left {
+  @media only screen and (max-width: 991px) {
+    .background {
+      & > img {
+        object-position: right center;
+      }
+    }
+
+    .description {
       width: 100%;
       height: auto;
       padding: 40px 20px;
