--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -23,7 +23,7 @@
   }
 
   & :global(p) {
-    margin-bottom: 1.5dvw;
+    margin-bottom: 1em;
 
     &:last-child {
       margin-bottom: 0;
@@ -84,6 +84,7 @@
       font-size: clamp(1.5em, 6dvw, 3.5em);
       line-height: 100%;
       margin-bottom: 1em;
+      font-family: 'serif';
     }
 
     .description {
@@ -109,39 +110,71 @@
   display: block;
   padding: 0;
 
+  .background {
+    & > img {
+      object-position: right center;
+    }
+  }
+
+  .sectionStartText,
+  .sectionEndText {
+    position: absolute;
+    z-index: 1;
+    box-sizing: border-box;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .sectionStartText {
+    transform: translateY(-16.5%);
+    width: 100%;
+    max-width: 1350px;
+
+    & > div {
+      padding-top: 25%;
+    }
+  }
+
   .description {
     position: relative;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 5%;
     width: 50%;
     height: 100%;
+    padding: 0 calc(min(5.3%, 72px));
     background: var(--section-blue);
-    font-size: clamp(1em, 1.3dvw, 1.5em);
+    font-size: clamp(1em, 1.3dvw, 1.2em);
     line-height: 130%;
   }
 
+  .sectionEndText {
+    transform: translateY(-48%);
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1350px;
+
+    & > div {
+      padding-top: 25%;
+    }
+  }
+
   @media only screen and (max-width: 991px) {
+    height: auto;
+
     .background {
-      & > img {
-        object-position: right center;
-      }
+      display: none;
     }
 
     .description {
       width: 100%;
       height: auto;
-      padding: 40px 20px;
-
-      .description > p {
-        margin-bottom: 20px;
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-      }
+      padding-top: calc(max(35vw, 120px));
+      padding-bottom: calc(max(21vw, 72px));
     }
   }
 }
