--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -71,6 +71,8 @@
     box-sizing: border-box;
     width: 90%;
     max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 
     & > img {
       object-fit: contain;
