--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -6,8 +6,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
-  padding: 0 100px;
+  min-height: 100vh;
+  padding: 12dvw 100px;
 
   & > .background {
     position: absolute;
@@ -38,6 +38,7 @@
     max-width: 1350px;
 
     & > div {
+      position: relative;
       padding-top: 25%;
     }
   }
@@ -51,12 +52,14 @@
   }
 
   @media only screen and (max-width: 767px) {
-    padding: 0 20px;
+    min-height: 100vh;
+    padding: 12dvw 20px;
   }
 }
 
 .first {
-  padding: 0;
+  padding-left: 0;
+  padding-right: 0;
 
   .mainLogos {
     position: relative;
@@ -103,15 +106,30 @@
     width: 35dvw;
 
     .title {
-      font-size: clamp(1.5em, 6dvw, 3.5em);
-      line-height: 100%;
-      margin-bottom: 1em;
-      font-family: 'serif';
+      position: relative;
+      margin-bottom: 3em;
+
+      & > div {
+        position: relative;
+        padding-top: 25%;
+
+        & > img {
+          object-fit: contain;
+          object-position: left center;
+        }
+      }
     }
 
     .description {
       font-size: clamp(1em, 1.5dvw, 1.5em);
-      line-height: 130%;
+    }
+  }
+
+  @media only screen and (max-width: 991px) {
+    .textContent {
+      .title {
+        margin-bottom: 2em;
+      }
     }
   }
 
@@ -120,10 +138,6 @@
 
     .textContent {
       width: 100%;
-
-      .title {
-        line-height: 130%;
-      }
     }
   }
 }
@@ -150,15 +164,15 @@
     flex-direction: column;
     justify-content: center;
     width: 50%;
-    height: 100%;
-    padding: 0 calc(min(5.3%, 72px));
+    min-height: 100vh;
+    padding: calc(max(min(25dvw, 337px), 50vh - 50%)) calc(min(5.3%, 72px));
     background: var(--section-blue);
     font-size: clamp(1em, 1.3dvw, 1.2em);
-    line-height: 130%;
   }
 
   @media only screen and (max-width: 991px) {
     height: auto;
+    min-height: 0;
 
     .background {
       display: none;
@@ -166,7 +180,7 @@
 
     .description {
       width: 100%;
-      height: auto;
+      min-height: 0;
       padding-top: calc(max(35vw, 120px));
       padding-bottom: calc(max(21vw, 72px));
     }
@@ -176,8 +190,8 @@
 .fifth {
   background: var(--section-orange);
   height: auto;
+  min-height: 0;
   font-size: clamp(1em, 1.3dvw, 1.2em);
-  line-height: 110%;
   padding: 0 5.3%;
   padding-top: calc(max(9vw, 60px));
   padding-bottom: calc(max(10vw, 72px));
@@ -237,7 +251,7 @@
 
         & > div {
           padding: 0 20px;
-          margin-bottom: 1.5dvw;
+          margin-bottom: 1em;
 
           &:last-child {
             margin-bottom: 0;
