--- a/app/ui/header/header.module.css
+++ b/app/ui/header/header.module.css
@@ -4,7 +4,9 @@
   --padding-horizontal: 50px;
 
   position: absolute;
+  box-sizing: border-box;
   display: flex;
+  flex-direction: column;
   z-index: 10;
   background-color: transparent;
   width: 100%;
@@ -34,12 +36,6 @@
 
 .mobile {
   display: none;
-
-  .hamburgerIcon {
-    position: relative;
-    display: inline-block;
-    top: -2px;
-  }
 }
 
 .start {
@@ -54,22 +50,38 @@
     position: relative;
     display: inline-block;
     margin-left: 20px;
+    vertical-align: top;
   }
 
   .iconLink {
+    box-sizing: content-box;
     width: 1.3em;
     height: 1.3em;
-    bottom: -3px;
+    top: -10px;
+    border-radius: 50%;
+    padding: 10px;
+    margin-left: 10px;
+
+    &:last-child {
+      margin-left: 0;
+    }
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.07);
+    }
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .header > :global(#EZDrawerHeader) {
+    display: none;
   }
 }
 
 @media only screen and (max-width: 991px) {
   .header {
-    --padding-top-absolute: 0;
-    --padding-vertical-sticky: 0;
+    --padding-top-absolute: 10px;
     --padding-horizontal: 15px;
-
-    position: fixed;
   }
 
   .desktop {
@@ -78,8 +90,83 @@
 
   .mobile {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    align-self: flex-end;
+  }
+
+  .drawerToggleButton {
+    position: relative;
+    display: inline-block;
+    font-size: 32px;
+    padding: 10px 10px 15px;
+    border-radius: 50%;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.07);
+    }
+  }
+
+  .drawer.container {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: auto;
+    padding: 20px;
+    padding-right: 50px;
+
+    .closeButton {
+      position: absolute;
+      right: 10px;
+      top: 12px;
+      font-size: 24px;
+      border-radius: 50%;
+      padding: 8px 10px;
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+    }
+  }
+
+  .copyButton {
+    display: block;
     width: 100%;
+    text-align: left;
+    white-space: nowrap;
+
+    & > span:first-child {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-align: left;
+      max-width: 100%;
+    }
+
+    &:hover {
+      color: #ccc;
+    }
+  }
+
+  .end {
+    margin-top: 1.3em;
+
+    & > * {
+      display: block;
+      margin-left: 0;
+      padding: 2px 0;
+
+      &:hover {
+        color: #ccc;
+      }
+    }
+
+    .iconLink {
+      display: inline-block;
+      margin-left: 0;
+      margin-right: 15px;
+      margin-top: 1.3em;
+      padding: 0;
+      top: 0;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 }
