--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@
 }
 
 :root {
-  --foreground: #fff;
+  --foreground: #FAF3E4;
   --hover-background: rgba(0, 0, 0, 0.07);
   --hover-foreground: #000;
   --section-blue: #1F48C7;
@@ -58,10 +58,18 @@
   --mobile-width-max: 767px;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+}
+
 body {
   color: var(--foreground);
   font-family: 'Roobert', sans-serif;
-  line-height: 140%;
+  line-height: 150%;
+  overflow-x: hidden;
 }
 
 a:hover {
