--- a/app/page.module.css
+++ b/app/page.module.css
@@ -39,7 +39,7 @@
     margin-right: auto;
     max-width: var(--headline-max-width);
 
-    & > div {
+    & > * {
       position: relative;
       padding-top: 25%;
     }
@@ -140,7 +140,7 @@
       position: relative;
       margin-bottom: 3em;
 
-      & > div {
+      & > * {
         position: relative;
         padding-top: 37%;
 
@@ -254,7 +254,7 @@
       flex-direction: column;
       justify-content: center;
 
-      & > div {
+      & > * {
         margin-bottom: 1em;
 
         &:last-child {
@@ -294,7 +294,7 @@
         flex-direction: column;
         align-items: center;
 
-        & > div {
+        & > * {
           padding: 0;
           margin-bottom: 1em;
 
