--- a/app/ui/header/header.module.css
+++ b/app/ui/header/header.module.css
@@ -1,5 +1,6 @@
 .header {
   --padding-top-absolute: 50px;
+  --padding-top-sticky: 10px;
   --padding-horizontal: 50px;
   --foregound: #fff;
 
@@ -19,11 +20,16 @@
 
   &.sticky {
     position: fixed;
-    padding: 10px var(--padding-horizontal) 0;
+    padding: var(--padding-top-sticky) var(--padding-horizontal) 0;
     pointer-events: none;
 
     & > * {
       pointer-events: auto;
+    }
+
+    &,
+    .copyButton {
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     }
 
     /* Sticky animation (header slides in from top). */
@@ -89,14 +95,20 @@
 
 @media only screen and (max-width: 991px) {
   .header {
-    --padding-top-absolute: 10px;
-    --padding-horizontal: 15px;
+    --padding-top-absolute: 0;
+    --padding-top-sticky: 0;
+    --padding-horizontal: 0;
     --hover-foreground: #ccc;
 
     position: fixed;
 
     &.sticky {
       transition: none;
+
+      &,
+      .copyButton {
+        text-shadow: none;
+      }
     }
   }
 
@@ -113,7 +125,8 @@
     position: relative;
     display: inline-block;
     font-size: 32px;
-    padding: 10px 10px 15px;
+    line-height: 1;
+    padding: 5px 10px 10px;
     border-radius: 50%;
 
     &:hover {
@@ -132,8 +145,9 @@
     .closeButton {
       position: absolute;
       right: 10px;
-      top: 12px;
+      top: 9px;
       font-size: 24px;
+      line-height: 1;
       border-radius: 50%;
       padding: 8px 10px;
 
