Update header hover state.

--- a/app/ui/header/header.module.css
+++ b/app/ui/header/header.module.css
@@ -23,13 +23,23 @@
     padding: var(--padding-top-sticky) var(--padding-horizontal) 0;
     pointer-events: none;
 
-    & > * {
+    & > :global(.EZDrawer),
+    .drawerToggleButton,
+    .start > *,
+    .end > * {
       pointer-events: auto;
     }
 
     &,
     .copyButton {
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+      text-shadow: var(--text-shadow);
+    }
+
+    .start > *,
+    .end > * {
+      &:hover {
+        text-shadow: none;
+      }
     }
 
     /* Sticky animation (header slides in from top). */
@@ -55,13 +65,23 @@
   flex: 1;
 }
 
+.start > *,
+.end > * {
+  border-radius: 5px;
+  padding: 3px 10px;
+  height: 32px;
+
+  &:hover {
+    background-color: var(--hover-background);
+  }
+}
+
 .end {
   align-self: flex-end;
 
   & > * {
     position: relative;
     display: inline-block;
-    margin-left: 20px;
     vertical-align: top;
   }
 
@@ -69,17 +89,11 @@
     box-sizing: content-box;
     width: 1.3em;
     height: 1.3em;
-    top: -8px;
+    top: -5px;
     border-radius: 50%;
     padding: 10px;
-    margin-left: 10px;
-
-    &:last-child {
-      margin-left: 0;
-    }
 
     &:hover {
-      background-color: var(--hover-background);
       & > img {
         filter: invert(100%);
       }
@@ -154,6 +168,16 @@
       &:hover {
         background-color: var(--hover-background);
       }
+    }
+  }
+
+  .start > *,
+  .end > * {
+    padding: 0;
+    height: auto;
+
+    &:hover {
+      background-color: transparent;
     }
   }
 
