--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,11 @@
 
 :root {
   --foreground: #FAF3E4;
-  --hover-background: rgba(0, 0, 0, 0.07);
+  --hover-background: rgba(255, 255, 255, 0.25);
   --hover-foreground: #000;
   --section-blue: #1F48C7;
   --section-orange: #E43A13;
+  --text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 
   --desktop-width-min: 992px;
   --tablet-width-max: 991px;
