--- a/app/page.module.css
+++ b/app/page.module.css
@@ -45,7 +45,7 @@
     }
   }
 
-  .textContent {
+  .content {
     position: relative;
     box-sizing: border-box;
     display: flex;
@@ -132,7 +132,7 @@
 .second {
   align-items: flex-end;
 
-  .textContent {
+  .content {
     width: 35vw;
 
     .title {
@@ -152,7 +152,7 @@
   }
 
   @media only screen and (max-width: 991px) {
-    .textContent {
+    .content {
       .title {
         margin-bottom: 2em;
       }
@@ -162,7 +162,7 @@
   @media only screen and (max-width: 767px) {
     align-items: center;
 
-    .textContent {
+    .content {
       width: 100%;
     }
   }
@@ -194,7 +194,7 @@
     width: 100%;
   }
 
-  .textContent {
+  .content {
     width: 50%;
     min-height: 100vh;
     padding: min(calc(20% + 2.7em), calc(var(--headline-max-width) / 4)) var(--pad-h-clamp);
@@ -208,7 +208,7 @@
       display: none;
     }
 
-    .textContent {
+    .content {
       width: 100%;
       min-height: 0;
       padding-bottom: max(15%, 90px);
@@ -226,9 +226,25 @@
 }
 
 .sixth {
+  padding-top: min(calc(20% + 2.7em), calc(var(--headline-max-width) / 4));
+
   .sectionHeadline {
     transform: translateY(-19%);
     width: 100%;
+  }
+
+  .content {
+    width: 100%;
+
+    .title {
+      text-align: center;
+      margin-bottom: 1em;
+      font-size: clamp(1.5em, 2.5vw, 2.5em);
+    }
+
+    .currencySwap {
+      margin-bottom: 3em;
+    }
   }
 }
 
@@ -241,7 +257,7 @@
     }
   }
 
-  .textContent {
+  .content {
     position: absolute;
     left: max(38%, 70vh);
     bottom: 100px;
@@ -257,14 +273,14 @@
   }
 
   @media only screen and (max-width: 1200px) {
-    .textContent {
+    .content {
       padding-right: var(--pad-h-clamp);
     }
   }
 
   @media only screen and (max-width: 1090px) and (max-aspect-ratio: 7/6) {
 
-    .textContent {
+    .content {
       position: relative;
       left: auto;
       bottom: auto;
@@ -273,7 +289,7 @@
   }
 
   @media only screen and (max-width: 767px) {
-    .textContent {
+    .content {
       bottom: auto
     }
   }
