--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -69,6 +69,7 @@
     position: relative;
     width: 90%;
     max-width: 1200px;
+    overflow: hidden;
   }
 
   .nycContainer,
@@ -237,6 +238,7 @@
     width: 100%;
 
     .title {
+      position: relative;
       text-align: center;
       margin-bottom: 1em;
       font-size: clamp(1.5em, 2.5vw, 2.5em);
