--- a/src/components/dex-chart/dex-chart.module.css
+++ b/src/components/dex-chart/dex-chart.module.css
@@ -3,8 +3,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  min-height: 800px;
+  height: calc(100vh - 5em);
 
   .iframe {
     flex-grow: 1;
