--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -260,9 +260,9 @@
     .title {
       position: relative;
       text-align: center;
-      margin-bottom: 1em;
+      margin-bottom: 0.8em;
       font-size: clamp(1.5em, 2.5vw, 2.5em);
-      margin-top: 3em;
+      margin-top: min(3em, 90px);
     }
   }
 }
