--- a/src/components/currency-swap/currency-swap.module.css
+++ b/src/components/currency-swap/currency-swap.module.css
@@ -1,11 +1,18 @@
 .currencySwap {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #111116;
   max-width: 382px;
-  border-radius: 20px;
+  min-height: 360px;
+  border-radius: .5rem;
   margin-left: auto;
   margin-right: auto;
+
+  & > * {
+    position: relative;
+    width: 100%;
+  }
 }
