--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -252,7 +252,7 @@
     @media only screen and (max-width: 1200px) {
       text-align: left;
 
-      & > p > br {
+      & > * > p > br {
         display: none;
       }
     }
